--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 /log/*.log
 /tmp
 
+/node_modules/*
+/vendor/assets/bower_components/*
+
 /public/assets/*.js
 /public/assets/*.json
 /public/assets/*.gz
