--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,9 @@
   "dependencies": {
     "angular": ">=1.4.0",
     "jquery": ">=2.1.4",
-    "angular-ui-router": ">=0.2.15"
+    "angular-ui-router": ">=0.2.15",
+    "underscore": ">=1.8.3",
+    "jasmine-jquery": "~2.0.5",
+    "angular-mocks": ">=1.4.0"
   }
 }
