--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: test_psql
+  database: production_psql
   pool: 5
   username: mikey
   password:
