--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-ui-router": ">=0.2.15",
     "underscore": ">=1.8.3",
     "jasmine-jquery": "~2.0.5",
-    "angular-mocks": ">=1.4.0"
+    "angular-mocks": ">=1.4.0",
+    "ng-token-auth": ">=0.0.29"
   }
 }
