--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "angular": ">=1.4.0",
     "jquery": ">=2.1.4",
     "angular-ui-router": ">=0.2.15",
+    "bootstrap": "~3.2",
     "underscore": ">=1.8.3",
     "jasmine-jquery": "~2.0.5",
     "angular-mocks": ">=1.4.0",
