--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "dependencies": {
     "bower": ">=1.0",
+    "gulp": ">=3.9",
+    "gulp-sass": ">=0",
     "jasmine-core": "*",
     "ng-html2js": "~2.0.0",
     "karma": "0.12.23",
     "karma-jasmine": "~0.3.1",
     "karma-ng-html2js-preprocessor": "^0.1.1",
     "karma-phantomjs-launcher": "*",
-    "phantomjs-prebuilt": ">=1.9.0"
+    "phantomjs-prebuilt": ">=1.9.0",
+    "shelljs": ">=0"
   },
   "devDependencies": {
     "karma-chrome-launcher": "^0.2.3"
