--- a/hologram_config.yml
+++ b/hologram_config.yml
@@ -10,7 +10,7 @@ destination: ./public/styleguide
 # The assets needed to build the docs (includes header.html,
 # footer.html, etc)
 # You may put doc related assets here too: images, css, etc.
-documentation_assets: ./styleguide_assets
+documentation_assets: ./styleguide/styleguide_assets
 
 # The folder that contains templates for rendering code examples.
 # If you want to change the way code examples appear in the styleguide,
@@ -27,7 +27,7 @@ code_example_renderers: ./code_example_renderers
 # folder. Typically this will include the css that you are trying to
 # document. May also include additional folders as needed.
 dependencies:
-  - ./build
+#  - ./build
 
 # Mark which category should be the index page
 # Alternatively, you may have an index.md in the documentation assets
